# snowBrain

./: .env.example  .eslintrc.json  .gitignore  .vercelignore  README.md  bun.lockb  chat.d.ts  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  setup.ts  tailwind.config.js  temp.py  thunder-file_0201d4fd.json  tsconfig.json
.github/workflows/: deploy-modal.yml
app/: actions.ts  icon.tsx  layout.tsx  page.tsx
code-plugin/: common.py  main-fk.py  main.py  pyproject.toml  requirements.txt  temp.py
components/: chat-list.tsx  chat-message.tsx  chat-panel.tsx  chat.tsx  clear-history.tsx  empty-screen.tsx  footer.tsx  header.tsx  login-button.tsx  prompt-form.tsx  schema.tsx  sidebar-actions.tsx  sidebar-footer.tsx  toaster.tsx  user-menu.tsx
components/ui/: LogoIcon.tsx  alert-dialog.tsx  icons.tsx  toast.tsx
config/: pinecone.ts
embed/: checksums.json  embed.py  requirements.txt  snowflake_ddl_fetcher.py
hooks/: getAIresponse.ts  use-copy-to-clipboard.ts  use-local-storage.ts  useChain.ts
lib/: db_types.ts  extractSQL.ts  extractSqlFromMessages.ts  mdTable.ts  rate-limiter.ts  redis.ts  uploadToCloudinary.ts  useToast.ts  utils.ts
lib/hooks/: use-at-bottom.tsx  use-local-storage.ts  use-toast.ts
src/: auth.ts  middleware.ts
src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
src/components/: ChatArea.tsx  (+19 more)
supabase/: config.toml
utils/: chain.ts  chatHelpers.ts  fetchHelpers.ts  initialChat.ts  openai.ts  pinecone-client.ts  prompts.ts  snow.ts  stream.ts  supabase.ts  supabaseClient.ts  tables.ts  vchain.ts
(+49 files in other folders)
